fix ? and make rail icon smaller

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -813,7 +813,7 @@ table .livery {
     .rail {
         border-radius: 9px;
         height: 16px;
-        line-height: 19px;
+        line-height: 18px;
         width: 16px;
     }
 }
